# nek2vtk

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: blasius_boundary_layer.md
nek2vtk/: __init__.py  boundary.py  casefile.py  cli.py  convert.py  geometry.py  mesh_export.py  naming.py  nekfaces.py  pvd.py  re2boundary.py  regions.py  surface.py  volume.py
tests/: test_smoke.py
