[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nek2vtk"
version = "0.1.0"
description = "Convert Nek5000/NekRS field data into per-boundary VTP surfaces and a VTKHDF volume, with the boundary information the .f files lack."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Akshit Jariwala", email = "akshit@utexas.edu" }]
keywords = ["nek5000", "nekrs", "vtk", "paraview", "cfd", "spectral-element"]

dependencies = [
    "numpy",
    "scipy",
    "pymech>=1.5",
    "pyvista>=0.40",
    "mpi4py>=3.1",
    "h5py>=3.0",
    "pysemtools",
]

[project.scripts]
nek2vtk = "nek2vtk.cli:main"

[project.urls]
Homepage = "https://github.com/"

[tool.setuptools.packages.find]
include = ["nek2vtk*"]
